--- a/index.html
+++ b/index.html
@@ -4,8 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FitLine</title>
+    <link rel="stylesheet" href="./assets/style/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+        integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
-    
+    <header>
+        <div class="section section-navigation">
+            <div class="container">
+                <div class="logo">
+                    <a href=""><img src="./assets/img/logotype.svg" alt=""></a>
+                </div>
+
+                <div class="middle">
+                    <a href=""><p>ЙОГА</p></a>
+                    <a href=""><p>МФР</p></a>
+                    <a href=""><p>РАСТЯЖКА</p></a>
+                    <a href=""><p>HIIT</p></a>
+                    <a href=""><p>ГАЙДЫ</p></a>
+                </div>
+
+                <div class="icons">
+                    <img src="./assets/img/search.svg" alt="">
+                    <img src="./assets/img/cart.svg" alt="">
+                    <img src="./assets/img/home.svg" alt="">
+                </div>
+            </div>
+        </div>
+    </header>
 </body>
 </html>
