--- a/index.html
+++ b/index.html
@@ -32,6 +32,63 @@
                 </div>
             </div>
         </div>
+        <div class="section section-title">
+            <div class="container">
+                <div class="text">
+                    <h2>Фитнес платформа онлайн-тренировок</h2>
+                    <p>Тренировки разного уровня сложности и для любых целей:
+                        восстановление, снижение веса, набор мышечной массы
+                        и многое другое. Занимайтесь когда и где вам удобно.
+                    </p>
+                    <div class="knopka">
+                        <button>Выбрать курс</button>
+                    </div>
+                </div>
+                <img src="./assets/img/1.png" alt="">
+            </div>
+        </div>
     </header>
+
+    <main>
+        <div class="section section-courses">
+            <div class="container">
+                <h2>Выберите курс</h2>
+
+                <div class="cards">
+                    <div class="card">
+                        <img src="./assets/img/2.png" alt="">
+                        <p>Йога</p>
+                    </div>
+                    <div class="card">
+                        <img src="./assets/img/3.png" alt="">
+                        <p>Растяжка</p>
+                    </div>
+                    <div class="card">
+                        <img src="./assets/img/4.png" alt="">
+                        <p>HIIT</p>
+                    </div>
+                </div>
+
+                <div class="knopka">
+                    <button>Смотреть все</button>
+                </div>
+            </div>
+        </div>
+
+        <div class="section section-proba">
+            <div class="container">
+                <div class="text">
+                <h2>Попробуйте бесплатно</h2>
+                <p>Смотрите и выполняйте первую тренировку любого курса
+                    бесплатно и выбирайте то, что вам подходит больше всего. 
+                </p>
+
+                <div class="knopka">
+                    <button>Попробовать бесплатно</button>
+                </div>
+                </div>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
