--- a/index.html
+++ b/index.html
@@ -89,6 +89,49 @@
                 </div>
             </div>
         </div>
+
+        <div class="section section-buy">
+            <div class="container">
+                <img src="./assets/img/6.jpg" alt="">
+
+                <div class="text">
+                    <h2><span>ОНЛАЙН-КУРС</span>Растяжка</h2>
+                    <p>Классическая растяжка на все тело на платформе Fitline.
+                        Занятия для спины, стоп, продольного и поперечного шпагата.
+                    </p>
+
+                    <div class="elements">
+                        <div class="element">
+                            <p>Высокий рейтинг</p>
+                            <div class="star">
+                                <i class="fa-regular fa-star"></i>
+                                <p>5.0</p>
+                            </div>
+                        </div>
+
+                        <div class="element">
+                            <div class="week">
+                                <i class="fa-solid fa-clock-rotate-left"></i>
+                                <p>8 недель</p>
+                            </div>
+
+                            <div class="tren">
+                                <i class="fa-regular fa-calendar-days"></i>
+                                <p>24 тренировки</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="sell">
+                        <h2>2590 ₽</h2>
+
+                        <div class="knopka">
+                            <button>Купить курс</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
 </body>
 </html>
