--- a/index.html
+++ b/index.html
@@ -95,10 +95,12 @@
                 <img src="./assets/img/6.jpg" alt="">
 
                 <div class="text">
-                    <h2><span>ОНЛАЙН-КУРС</span>Растяжка</h2>
-                    <p>Классическая растяжка на все тело на платформе Fitline.
+                    <div class="title-text">
+                        <h2><span>ОНЛАЙН-КУРС</span> <br> Растяжка</h2>
+                        <p>Классическая растяжка на все тело на платформе Fitline.
                         Занятия для спины, стоп, продольного и поперечного шпагата.
-                    </p>
+                        </p>
+                    </div>
 
                     <div class="elements">
                         <div class="element">
