--- a/index.html
+++ b/index.html
@@ -134,6 +134,52 @@
                 </div>
             </div>
         </div>
+
+        <div class="section section-interactiv">
+            <div class="container">
+                <div class="interactive box">
+                    <div class="buttons">
+                        <input type="radio" name="r" id="r1" hidden checked>
+                        <input type="radio" name="r" id="r2" hidden>
+                        <input type="radio" name="r" id="r3" hidden>
+                        <label for="r1" id="l1"><p>Тренеры</p></label>
+                        <label for="r2" id="l2"><p>Оборудование</p></label>
+                        <label for="r3" id="l3"><p>Отзывы</p></label>
+                    </div>
+                    <div class="infoblock">
+                        <div class="text">
+                            <p>Занятия на платформе проводят  профессиональные  тренеры, спортсмены, мастера спорта. Очень важно доверять тренеру, прислушиваться к нему, чтобы тренировка была  эффективной
+                                и безопасной.
+                            </p>
+                        </div>
+                        <div class="cards">
+                            <div class="card">
+                                <img src="./assets/img/7.png" alt="7">
+                                <div class="name">
+                                    <h4>Ирина Усольцева</h4>
+                                    <p>Мастер спорта по гимнастике</p>
+                                </div>
+                            </div>
+                            <div class="card">
+                                <img src="./assets/img/8.png" alt="8">
+                                <div class="name">
+                                    <h4>Елена Артемьева</h4>
+                                    <p>Артистка балета</p>
+                                </div>
+                            </div>
+                            <div class="card">
+                                <img src="./assets/img/9.png" alt="9">
+                                <div class="name">
+                                    <h4>Алена Свиридова</h4>
+                                    <p>Чемпионка России по акробатике</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        
     </main>
 </body>
 </html>
