--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
+<h1 style="text-align: center;">НЕ ДОДЕЛАНО</h1>
 <body>
     <header>
         <div class="section section-navigation">
@@ -180,6 +181,22 @@
             </div>
         </div>
         
+        <div class="section section-about">
+            <div class="container">
+                <div class="text">
+                    <h2>О платформе Fitline</h2>
+                    <p>Fitline – это платформа онлайн-тренировок от лучших тренеров России. Большой выбор программ и разный уровень сложности в каждой из них позволят вам подобрать ту физическую нагрузку, которая необходима.
+                        <br><br>На платформе есть тренировки для разных целей: снижение веса, набор мышечной массы, восстановление, развитие гибкости, поддержка общего тонуса организма. 
+                    </p>
+
+                    <div class="knopka">
+                        <button>Узнать больше</button>
+                    </div>
+                </div>
+
+                <img src="./assets/img/10.jpg" alt="">
+            </div>
+        </div>
     </main>
 </body>
 </html>
