--- a/index.html
+++ b/index.html
@@ -197,6 +197,53 @@
                 <img src="./assets/img/10.jpg" alt="">
             </div>
         </div>
+
+        <div class="section section-kak">
+            <div class="container">
+                <h2>Как это работает</h2>
+                <div class="cards">
+                    <div class="card">
+                        <div class="nomer">
+                            <p>01</p>
+                        </div>
+
+                        <h3>Выбор программы</h3>
+
+                        <p class="p-card">Выберите программу, которая вам нравится или заполните анкету на сайте, чтобы мы смогли  подобрать для вас наиболее подходящую тренировку.</p>
+                    </div>
+
+                    <div class="card">
+                        <div class="nomer">
+                            <p>02</p>
+                        </div>
+
+                        <h3>Личный кабинет</h3>
+
+                        <p class="p-card">После оплаты тренировки появятся в личном кабинете. Каждая тренировка открывается после выполнения предыдущей, чтобы распределять нагрузку.</p>
+                    </div>
+
+                    <div class="card">
+                        <div class="nomer">
+                            <p>03</p>
+                        </div>
+
+                        <h3>Правильный темп</h3>
+
+                        <p class="p-card">Включите видео-тренировку и занимайтесь когда и где вам удобно. В тренировку включен таймер, чтобы вы могли следить за темпом и делать паузы.</p>
+                    </div>
+
+                    <div class="card">
+                        <div class="nomer">
+                            <p>04</p>
+                        </div>
+
+                        <h3>Поддержка тренера</h3>
+
+                        <p class="p-card">Каждое занятие сопровождается инструкцией тренера по технике выполнения всех упражнений. Прислушивайтесь к нему, чтобы тренировка была безопасной.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
 </body>
 </html>
